--- a/index.html
+++ b/index.html
@@ -163,17 +163,49 @@
             /* PREVINE FLEXBOX WEIRDNESS NO BODY */
         }
 
-        /* Scrollbar invisível mas funcional */
+        /* Scrollbar Moderna e Elegante */
         ::-webkit-scrollbar {
-            width: 0px;
-            background: transparent;
+            width: 8px;
+            height: 8px;
         }
 
+        ::-webkit-scrollbar-track {
+            background: rgba(15, 23, 42, 0.1);
+            border-radius: 10px;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: rgba(148, 163, 184, 0.3);
+            border-radius: 10px;
+            border: 2px solid transparent;
+            background-clip: content-box;
+            transition: all 0.3s ease;
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background: rgba(59, 130, 246, 0.5);
+            border: 1px solid transparent;
+            background-clip: content-box;
+        }
+
+        /* Suporte para Firefox */
         * {
-            scrollbar-width: none;
-            /* Firefox */
-            -ms-overflow-style: none;
-            /* IE/Edge */
+            scrollbar-width: thin;
+            scrollbar-color: rgba(148, 163, 184, 0.3) transparent;
+        }
+
+        .accordion-body {
+            max-height: 450px;
+            overflow-y: auto;
+            padding: 0 !important;
+            scrollbar-width: thin;
+            -ms-overflow-style: auto;
+        }
+
+        .table-responsive {
+            overflow-x: auto;
+            scrollbar-width: thin;
+            -ms-overflow-style: auto;
         }
 
         h1,
