--- a/index.html
+++ b/index.html
@@ -1900,6 +1900,7 @@
     </div>
 
     <script src="js/script.js"></script>
+    <script src="js/freight_logic.js"></script>
     <!-- Cloud Manager Modal -->
     <div class="modal fade" id="cloudModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered">
