--- a/index.html
+++ b/index.html
@@ -1443,12 +1443,12 @@
                                 </div>
                                 <div class="card-footer">
                                     <label for="graphhopperApiKey" class="form-label">Chave da API
-                                        (GraphHopper):</label>
-                                    <input type="text" class="form-control" id="graphhopperApiKey"
-                                        value="6aaa58ba-e39d-447e-86b4-34cc7eb03d85"
-                                        placeholder="Insira sua chave para cálculo de KM">
+                                        (Opcional):</label>
+                                    <input type="text" class="form-control" id="graphhopperApiKey" value=""
+                                        placeholder="Valhalla/OSM (Gratuito)">
                                     <div class="form-text small">
-                                        <!-- A descriçáo será inserida aqui pelo JavaScript -->
+                                        O sistema agora usa <strong>OpenStreetMap (Valhalla)</strong> por padrão. Não é
+                                        necessária chave de API para o uso normal.
                                     </div>
                                 </div>
                             </div>
