--- a/index.html
+++ b/index.html
@@ -284,146 +284,184 @@
     /* --- ESTILOS PARA O NOVO LAYOUT DO DASHBOARD DE RESUMO --- */
     .kpi-card-modern {
         background: var(--dark-surface);
+        backdrop-filter: blur(var(--backdrop-blur));
+        -webkit-backdrop-filter: blur(var(--backdrop-blur));
         border: 1px solid var(--dark-border);
-        border-radius: 16px;
-        padding: 1.5rem;
+        border-radius: 20px;
+        padding: 1.75rem;
         position: relative;
         overflow: hidden;
-        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        box-shadow: var(--box-shadow);
     }
 
     .kpi-card-modern:hover {
-        transform: translateY(-4px);
-        box-shadow: 0 12px 24px -10px rgba(0, 0, 0, 0.3);
-        border-color: var(--dark-primary-glow);
+        transform: translateY(-6px) scale(1.02);
+        border-color: rgba(255, 255, 255, 0.15);
+        box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5), 0 0 20px rgba(59, 130, 246, 0.1);
     }
 
-    /* Faixa lateral colorida */
+    /* Faixa lateral colorida com brilho */
     .kpi-card-modern::after {
         content: '';
         position: absolute;
         top: 0;
         left: 0;
-        width: 4px;
+        width: 5px;
         height: 100%;
         background: var(--dark-border);
-        transition: background 0.3s ease;
+        transition: all 0.3s ease;
     }
 
     .kpi-card-modern.available::after {
-        background: var(--dark-primary);
+        background: linear-gradient(to bottom, var(--dark-primary), #60a5fa);
         box-shadow: 2px 0 15px var(--dark-primary-glow);
     }
 
     .kpi-card-modern.blocked::after {
-        background: var(--dark-accent-secondary);
-        box-shadow: 2px 0 15px rgba(236, 72, 153, 0.4);
+        background: linear-gradient(to bottom, #f472b6, #db2777);
+        box-shadow: 2px 0 15px rgba(244, 114, 182, 0.4);
     }
 
     .kpi-card-modern.alert::after {
-        background: #dc3545;
-        box-shadow: 2px 0 15px rgba(220, 53, 69, 0.4);
+        background: linear-gradient(to bottom, #ef4444, #b91c1c);
+        box-shadow: 2px 0 15px rgba(239, 68, 68, 0.4);
     }
 
     .kpi-icon-watermark {
         position: absolute;
-        right: -15px;
-        bottom: -15px;
-        font-size: 6rem;
-        opacity: 0.03;
-        transform: rotate(-15deg);
+        right: -10px;
+        bottom: -10px;
+        font-size: 7rem;
+        opacity: 0.05;
+        transform: rotate(-10deg);
         pointer-events: none;
-        color: currentColor;
+        color: var(--dark-primary);
+        transition: all 0.5s ease;
+    }
+
+    .kpi-card-modern:hover .kpi-icon-watermark {
+        transform: rotate(0deg) scale(1.1);
+        opacity: 0.08;
     }
 
     .kpi-label {
-        font-size: 0.75rem;
-        font-weight: 700;
+        font-size: 0.8rem;
+        font-weight: 800;
         text-transform: uppercase;
-        letter-spacing: 1.2px;
+        letter-spacing: 0.15em;
         color: var(--dark-text-secondary);
-        margin-bottom: 0.5rem;
+        margin-bottom: 0.75rem;
         display: flex;
         align-items: center;
-        gap: 0.5rem;
+        gap: 0.6rem;
+    }
+
+    .kpi-label i {
+        font-size: 1.1rem;
+        color: var(--dark-primary);
     }
 
     .kpi-metric-group {
         display: flex;
         align-items: baseline;
-        gap: 0.4rem;
+        gap: 0.5rem;
     }
 
     .kpi-metric-value {
-        font-size: 2.5rem;
-        font-weight: 800;
+        font-size: 2.75rem;
+        font-weight: 900;
         color: var(--dark-text-primary);
         line-height: 1;
-        letter-spacing: -1px;
+        letter-spacing: -2px;
+        text-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
     }
 
     .kpi-metric-unit {
-        font-size: 1rem;
-        font-weight: 600;
+        font-size: 1.1rem;
+        font-weight: 700;
         color: var(--dark-text-secondary);
+        text-transform: lowercase;
     }
 
     .kpi-footer {
-        margin-top: 1rem;
-        padding-top: 1rem;
-        border-top: 1px solid var(--dark-border);
+        margin-top: 1.25rem;
+        padding-top: 1.25rem;
+        border-top: 1px solid rgba(255, 255, 255, 0.05);
         display: flex;
         align-items: center;
         justify-content: space-between;
-        font-size: 0.85rem;
+        font-size: 0.9rem;
         color: var(--dark-text-secondary);
+        font-weight: 500;
     }
 
-    /* Lista Moderna para Outras Categorias */
+    /* --- ANIMAá‡áƒO DE CARREGAMENTO V9 - "HOLOGRAPHIC NEXUS" --- */
+    .loading-animation-container {
+        position: relative;
+        width: 100%;
+        height: 280px;
+        overflow: hidden;
+        margin-bottom: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background: radial-gradient(circle at center, rgba(15, 23, 42, 0.4) 0%, rgba(3, 7, 18, 0.9) 100%);
+        border: 1px solid var(--dark-border);
+        border-radius: 24px;
+        box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5);
+        backdrop-filter: blur(10px);
+    }
+
+    /* Modern List for Summary Other Categories */
     .modern-list-group {
         display: flex;
         flex-direction: column;
-        gap: 0.75rem;
+        gap: 1rem;
     }
 
     .modern-list-item {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 0.75rem 1rem;
-        background: rgba(255, 255, 255, 0.02);
-        border: 1px solid var(--dark-border);
-        border-radius: 12px;
-        transition: all 0.2s ease;
+        padding: 1rem 1.25rem;
+        background: rgba(255, 255, 255, 0.03);
+        border: 1px solid rgba(255, 255, 255, 0.05);
+        border-radius: 16px;
+        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .modern-list-item:hover {
-        background: rgba(255, 255, 255, 0.05);
-        transform: translateX(4px);
-        border-color: var(--dark-primary-glow);
+        background: rgba(255, 255, 255, 0.08);
+        border-color: var(--dark-primary);
+        transform: translateX(8px);
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
     }
 
     .modern-list-icon {
-        width: 36px;
-        height: 36px;
+        width: 42px;
+        height: 42px;
         display: flex;
         align-items: center;
         justify-content: center;
-        border-radius: 10px;
-        background: var(--dark-surface-secondary);
-        color: var(--dark-text-secondary);
-        margin-right: 1rem;
-        font-size: 1.1rem;
+        border-radius: 12px;
+        background: rgba(59, 130, 246, 0.1);
+        color: var(--dark-primary);
+        margin-right: 1.25rem;
+        font-size: 1.25rem;
         transition: all 0.3s ease;
+        border: 1px solid rgba(59, 130, 246, 0.2);
     }
 
     .modern-list-item:hover .modern-list-icon {
         background: var(--dark-primary);
         color: white;
+        box-shadow: 0 0 15px var(--dark-primary-glow);
     }
 
     .modern-list-content {
@@ -431,43 +469,23 @@
     }
 
     .modern-list-title {
-        font-size: 0.85rem;
-        font-weight: 600;
+        font-size: 0.95rem;
+        font-weight: 700;
         color: var(--dark-text-primary);
         margin-bottom: 2px;
     }
 
     .modern-list-subtitle {
-        font-size: 0.75rem;
+        font-size: 0.8rem;
         color: var(--dark-text-secondary);
+        font-weight: 500;
     }
 
     .modern-list-value {
-        font-weight: 700;
-        color: var(--dark-text-primary);
-        font-size: 0.9rem;
-    }
-</style>
-
-<style>
-    /* --- ANIMAá‡áƒO DE CARREGAMENTO V9 - "HOLOGRAPHIC NEXUS" --- */
-    .loading-animation-container {
-        position: relative;
-        width: 100%;
-        height: 260px;
-        overflow: hidden;
-        margin-bottom: 1.5rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background:
-            radial-gradient(circle at center, rgba(15, 23, 42, 0.8) 0%, #0f172a 100%),
-            linear-gradient(0deg, transparent 24%, rgba(59, 130, 246, 0.05) 25%, rgba(59, 130, 246, 0.05) 26%, transparent 27%, transparent 74%, rgba(59, 130, 246, 0.05) 75%, rgba(59, 130, 246, 0.05) 76%, transparent 77%, transparent),
-            linear-gradient(90deg, transparent 24%, rgba(59, 130, 246, 0.05) 25%, rgba(59, 130, 246, 0.05) 26%, transparent 27%, transparent 74%, rgba(59, 130, 246, 0.05) 75%, rgba(59, 130, 246, 0.05) 76%, transparent 77%, transparent);
-        background-size: 100% 100%, 50px 50px, 50px 50px;
-        border-radius: 16px;
-        box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.6);
-        perspective: 1000px;
+        font-weight: 800;
+        color: var(--dark-primary);
+        font-size: 1.1rem;
+        text-shadow: 0 0 10px var(--dark-primary-glow);
     }
 
     .nexus-system {
@@ -706,6 +724,13 @@
                 <i class="bi bi-pie-chart-fill"></i>
                 <span>Resumo</span>
             </a>
+
+            <!-- Promoted Cloud Link -->
+            <a href="#" class="sidebar-link" onclick="openCloudManager()">
+                <i class="bi bi-cloud-check-fill text-info"></i>
+                <span>Plataforma Nuvem</span>
+            </a>
+
             <a href="#workspace-view" class="sidebar-link" onclick="activateView('workspace-view', this)">
                 <i class="bi bi-tools"></i>
                 <span>Mesa de Trabalho</span>
@@ -739,61 +764,61 @@
                         <span style="font-size: 0.85rem;">Alt. Rota</span>
                     </a>
                 </div>
-                <!-- Route Filter Container (Restored) -->
-                <!-- Route Filter Container (Optimized) -->
-                <div id="filtro-rota-container" class="px-3 py-2 no-print sidebar-fade-element">
-                    <label class="form-label text-muted small mb-1">Filtrar Rotas</label>
-                    <div class="d-flex flex-column gap-1">
-                        <select id="rotaInicioSelect"
-                            class="form-select form-select-sm bg-dark text-light border-secondary"
-                            style="font-size: 0.75rem;">
-                            <option value="">Início...</option>
-                        </select>
-                        <select id="rotaFimSelect"
-                            class="form-select form-select-sm bg-dark text-light border-secondary"
-                            style="font-size: 0.75rem;">
-                            <option value="">Fim...</option>
-                        </select>
-                    </div>
-                </div>
 
                 <hr style="border-color: rgba(255,255,255,0.1); width: 80%; margin: 1rem auto;">
 
-                <!-- Operational Buttons (Compact) -->
-                <div class="px-3" style="cursor: pointer;" onclick="document.getElementById('fileInput').click()">
+                <!-- Operational Buttons (Compact & Organized) -->
+                <!-- Carregar Button -->
+                <div class="px-3 mb-2" style="cursor: pointer;" onclick="document.getElementById('fileInput').click()">
                     <div
                         class="p-2 rounded-3 text-center border border-dashed border-secondary hover-border-primary transition-all position-relative overflow-hidden group">
-                        <i class="bi bi-file-earmark-arrow-up text-secondary fs-4 d-block mb-1 group-hover-white"></i>
-                        <span class="small text-muted d-block group-hover-white"
-                            style="font-size: 0.7rem;">Carregar</span>
+                        <i class="bi bi-file-earmark-arrow-up text-secondary fs-5 d-block mb-1 group-hover-white"></i>
+                        <span class="small text-muted d-block group-hover-white" style="font-size: 0.75rem;">Carregar
+                            Arquivo</span>
                         <!-- Hidden Input -->
                         <input type="file" id="fileInput" class="d-none" accept=".xlsx, .xls, .csv">
                     </div>
                 </div>
 
-                <div class="px-3 mt-2">
+                <!-- Processar Button -->
+                <div class="px-3 mb-3">
                     <button id="processarBtn" class="btn btn-primary w-100 p-2 position-relative" onclick="processar()"
                         disabled style="overflow: hidden;">
-                        <i class="bi bi-lightning-fill fs-5"></i>
-                        <span class="d-block small mt-1" style="font-size: 0.75rem; line-height: 1;">Processar</span>
+                        <i class="bi bi-lightning-fill fs-6"></i>
+                        <span class="d-inline-block small ms-1 fw-bold">PROCESSAR</span>
                     </button>
+                    <!-- Status Text Compacted -->
+                    <div id="status" class="status-message small text-muted text-truncate mt-1 text-center"
+                        style="font-size: 0.65rem; max-width: 100%;">Aguardando...</div>
                 </div>
 
-                <div class="px-2 mt-2 text-center">
-                    <div id="status" class="status-message small text-muted text-truncate"
-                        style="font-size: 0.7rem; max-width: 100%;">Aguardando...</div>
+                <!-- Route Filter Container (Moved down as it's less used) -->
+                <div id="filtro-rota-container"
+                    class="px-3 py-2 no-print sidebar-fade-element border-top border-secondary pt-3">
+                    <label class="form-label text-muted small mb-1" style="font-size: 0.7rem;">Filtro Rápido de
+                        Rotas</label>
+                    <div class="d-flex flex-column gap-1">
+                        <select id="rotaInicioSelect"
+                            class="form-select form-select-sm bg-dark text-light border-secondary"
+                            style="font-size: 0.7rem; padding: 0.2rem 0.5rem;">
+                            <option value="">Início...</option>
+                        </select>
+                        <select id="rotaFimSelect"
+                            class="form-select form-select-sm bg-dark text-light border-secondary"
+                            style="font-size: 0.7rem; padding: 0.2rem 0.5rem;">
+                            <option value="">Fim...</option>
+                        </select>
+                    </div>
                 </div>
-
         </nav>
 
         <!-- Footer / User -->
         <div class="sidebar-footer">
-            <!-- Tools Row -->
-            <div class="d-flex justify-content-around mb-2">
-                <button class="btn btn-sm btn-icon text-muted" onclick="openCloudManager()" title="Nuvem">
-                    <i class="bi bi-cloud-arrow-up-fill"></i>
-                </button>
-                <div class="form-check form-switch m-0" title="Auto Processar">
+            <!-- Tools Row (Cloud Removed) -->
+            <div class="d-flex justify-content-end gap-2 mb-3 pe-2">
+                <div class="form-check form-switch m-0 d-flex align-items-center" title="Auto Processar">
+                    <label class="form-check-label small text-muted me-2" for="autoProcessCheckbox"
+                        style="font-size: 0.7rem;">Auto</label>
                     <input class="form-check-input" type="checkbox" role="switch" id="autoProcessCheckbox" checked
                         style="transform: scale(0.8);">
                 </div>
@@ -836,6 +861,7 @@
             </div>
         </div>
     </aside>
+
 
     <!-- Overlay for Mobile -->
     <div id="sidebar-overlay" class="d-lg-none" onclick="toggleMobileSidebar()"
