--- a/index.html
+++ b/index.html
@@ -400,204 +400,197 @@
         font-weight: 500;
     }
 
-    /* --- ANIMAá‡áƒO DE CARREGAMENTO V9 - "HOLOGRAPHIC NEXUS" --- */
+    /* --- "QUANTUM LOGISTICS CORE" (V10) - SURREAL ANIMATION --- */
     .loading-animation-container {
         position: relative;
         width: 100%;
-        height: 280px;
+        height: 320px;
+        /* Mais alto para impacto */
         overflow: hidden;
         margin-bottom: 2rem;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        background: radial-gradient(circle at center, rgba(15, 23, 42, 0.4) 0%, rgba(3, 7, 18, 0.9) 100%);
-        border: 1px solid var(--dark-border);
-        border-radius: 24px;
-        box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5);
-        backdrop-filter: blur(10px);
-    }
-
-    /* Modern List for Summary Other Categories */
-    .modern-list-group {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-    .modern-list-item {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 1rem 1.25rem;
-        background: rgba(255, 255, 255, 0.03);
+        background: radial-gradient(circle at center, #0f172a 0%, #020617 100%);
         border: 1px solid rgba(255, 255, 255, 0.05);
-        border-radius: 16px;
-        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        border-radius: 24px;
+        box-shadow: inset 0 0 80px rgba(0, 0, 0, 0.8), 0 0 30px rgba(59, 130, 246, 0.1);
+        perspective: 1000px;
+        /* Profundidade 3D */
     }
 
-    .modern-list-item:hover {
-        background: rgba(255, 255, 255, 0.08);
-        border-color: var(--dark-primary);
-        transform: translateX(8px);
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-    }
-
-    .modern-list-icon {
-        width: 42px;
-        height: 42px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 12px;
-        background: rgba(59, 130, 246, 0.1);
-        color: var(--dark-primary);
-        margin-right: 1.25rem;
-        font-size: 1.25rem;
-        transition: all 0.3s ease;
-        border: 1px solid rgba(59, 130, 246, 0.2);
-    }
-
-    .modern-list-item:hover .modern-list-icon {
-        background: var(--dark-primary);
-        color: white;
-        box-shadow: 0 0 15px var(--dark-primary-glow);
-    }
-
-    .modern-list-content {
-        flex: 1;
-    }
-
-    .modern-list-title {
-        font-size: 0.95rem;
-        font-weight: 700;
-        color: var(--dark-text-primary);
-        margin-bottom: 2px;
-    }
-
-    .modern-list-subtitle {
-        font-size: 0.8rem;
-        color: var(--dark-text-secondary);
-        font-weight: 500;
-    }
-
-    .modern-list-value {
-        font-weight: 800;
-        color: var(--dark-primary);
-        font-size: 1.1rem;
-        text-shadow: 0 0 10px var(--dark-primary-glow);
-    }
-
-    .nexus-system {
+    /* O Núcleo Quântico */
+    .quantum-core {
         position: relative;
-        width: 160px;
-        height: 160px;
+        width: 80px;
+        height: 80px;
         transform-style: preserve-3d;
-        animation: nexus-float 6s ease-in-out infinite;
+        animation: core-float 6s ease-in-out infinite;
     }
 
-    .nexus-core {
+    .core-sphere {
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 40px;
-        height: 40px;
-        background: var(--dark-primary);
+        inset: 0;
+        background: radial-gradient(circle at 30% 30%, #60a5fa, #2563eb);
         border-radius: 50%;
-        box-shadow: 0 0 30px var(--dark-primary), 0 0 60px var(--dark-primary-glow), inset 0 0 15px rgba(255, 255, 255, 0.8);
-        animation: core-pulse-v9 2s infinite;
+        box-shadow: 0 0 60px #3b82f6, 0 0 100px rgba(59, 130, 246, 0.5);
+        animation: pulse-core 3s infinite;
         z-index: 10;
     }
 
-    .nexus-ring {
+    /* Anéis Orbitais */
+    .orbital-ring {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        border: 2px solid rgba(59, 130, 246, 0.3);
-        border-top-color: var(--dark-accent);
-        border-bottom-color: var(--dark-primary);
         border-radius: 50%;
-        box-shadow: 0 0 15px rgba(59, 130, 246, 0.1);
+        border: 2px solid transparent;
+        transform-style: preserve-3d;
     }
 
-    .nexus-ring:nth-child(2) {
-        width: 100%;
-        height: 100%;
-        animation: spin-v9 8s linear infinite;
-        border-width: 1px;
-        border-style: solid;
-        opacity: 0.6;
+    .ring-1 {
+        width: 140px;
+        height: 140px;
+        border-top: 4px solid #3b82f6;
+        border-bottom: 4px solid #3b82f6;
+        animation: spin-3d-x 4s linear infinite;
+        box-shadow: 0 0 20px rgba(59, 130, 246, 0.4);
     }
 
-    .nexus-ring:nth-child(3) {
-        width: 75%;
-        height: 75%;
-        animation: spin-v9-reverse 5s linear infinite;
-        border-width: 3px;
-        border-left-color: transparent;
-        border-right-color: transparent;
+    .ring-2 {
+        width: 180px;
+        height: 180px;
+        border-left: 2px solid #a855f7;
+        /* Roxo Neon */
+        border-right: 2px solid #a855f7;
+        animation: spin-3d-y 6s linear infinite;
+        box-shadow: 0 0 20px rgba(168, 85, 247, 0.4);
     }
 
-    .nexus-ring:nth-child(4) {
-        width: 50%;
-        height: 50%;
-        animation: spin-v9 3s linear infinite;
-        border-width: 2px;
-        border-style: dashed;
+    .ring-3 {
+        width: 220px;
+        height: 220px;
+        border: 1px dashed rgba(255, 255, 255, 0.3);
+        animation: spin-z 10s linear infinite;
     }
 
-    .data-packet {
+    /* Partículas de Energia */
+    .energy-particle {
         position: absolute;
-        top: 50%;
-        left: 0;
         width: 4px;
         height: 4px;
         background: #fff;
         border-radius: 50%;
-        box-shadow: 0 0 10px var(--dark-accent-secondary);
-        opacity: 0;
-        z-index: 5;
+        box-shadow: 0 0 10px #fff, 0 0 20px #3b82f6;
+        animation: particle-orbit 2s linear infinite;
     }
 
-    @keyframes nexus-float {
+    .particle-1 {
+        animation-duration: 2s;
+        top: 50%;
+        left: 50%;
+        transform-origin: 60px 0;
+    }
+
+    .particle-2 {
+        animation-duration: 3s;
+        top: 50%;
+        left: 50%;
+        transform-origin: -70px 20px;
+        animation-delay: 0.5s;
+        background: #a855f7;
+    }
+
+    .particle-3 {
+        animation-duration: 2.5s;
+        top: 50%;
+        left: 50%;
+        transform-origin: 0 80px;
+        animation-delay: 1s;
+        background: #22d3ee;
+    }
+
+    /* Keyframes Surreais */
+    @keyframes core-float {
 
         0%,
         100% {
-            transform: translateY(0) rotateX(15deg);
+            transform: translateY(0) rotateX(0);
         }
 
         50% {
-            transform: translateY(-15px) rotateX(-5deg);
+            transform: translateY(-20px) rotateX(10deg);
         }
     }
 
-    @keyframes core-pulse-v9 {
+    @keyframes pulse-core {
 
         0%,
         100% {
-            transform: translate(-50%, -50%) scale(1);
+            transform: scale(1);
             opacity: 1;
-            box-shadow: 0 0 30px var(--dark-primary), 0 0 60px var(--dark-primary-glow);
+            box-shadow: 0 0 60px #3b82f6;
         }
 
         50% {
-            transform: translate(-50%, -50%) scale(1.15);
-            opacity: 0.9;
-            box-shadow: 0 0 50px var(--dark-primary), 0 0 80px var(--dark-primary-glow);
+            transform: scale(1.2);
+            opacity: 0.8;
+            box-shadow: 0 0 100px #3b82f6;
         }
     }
 
-    @keyframes spin-v9 {
+    @keyframes spin-3d-x {
         0% {
-            transform: translate(-50%, -50%) rotate(0deg);
+            transform: translate(-50%, -50%) rotateX(0deg) rotateY(0deg);
         }
 
         100% {
-            transform: translate(-50%, -50%) rotate(360deg);
+            transform: translate(-50%, -50%) rotateX(360deg) rotateY(180deg);
         }
     }
+
+    @keyframes spin-3d-y {
+        0% {
+            transform: translate(-50%, -50%) rotateY(0deg) rotateZ(0deg);
+        }
+
+        100% {
+            transform: translate(-50%, -50%) rotateY(360deg) rotateZ(180deg);
+        }
+    }
+
+    @keyframes spin-z {
+        0% {
+            transform: translate(-50%, -50%) rotateZ(0deg);
+        }
+
+        100% {
+            transform: translate(-50%, -50%) rotateZ(360deg);
+        }
+    }
+
+    @keyframes particle-orbit {
+        0% {
+            transform: rotate(0deg) translateX(var(--orbit-radius, 80px)) rotate(0deg);
+            opacity: 0;
+        }
+
+        20% {
+            opacity: 1;
+        }
+
+        80% {
+            opacity: 1;
+        }
+
+        100% {
+            transform: rotate(360deg) translateX(var(--orbit-radius, 80px)) rotate(-360deg);
+            opacity: 0;
+        }
+    }
+
 
     @keyframes spin-v9-reverse {
         0% {
@@ -1713,15 +1706,19 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content" style="background-color: var(--dark-surface); backdrop-filter: blur(12px);">
                 <div class="modal-body text-center p-4">
-                    <!-- Nova Animaá§á£o de Carregamento V9 - "HOLOGRAPHIC NEXUS" -->
+                    <!-- NOVA ANIMAÇÃO V10 - "QUANTUM LOGISTICS CORE" -->
                     <div class="loading-animation-container">
-                        <div class="nexus-system">
-                            <div class="nexus-core"></div>
-                            <div class="nexus-ring"></div>
-                            <div class="nexus-ring"></div>
-                            <div class="nexus-ring"></div>
+                        <div class="quantum-core">
+                            <div class="core-sphere"></div>
+                            <div class="orbital-ring ring-1"></div>
+                            <div class="orbital-ring ring-2"></div>
+                            <div class="orbital-ring ring-3"></div>
+                            <div class="energy-particle particle-1"></div>
+                            <div class="energy-particle particle-2"></div>
+                            <div class="energy-particle particle-3"></div>
                         </div>
                     </div>
+
 
                     <h5 id="processing-status-text" class="mb-2">Montando Cargas...</h5>
                     <p id="thinking-text" class="text-muted small mb-3" style="height: 20px;"></p>
@@ -1932,7 +1929,7 @@
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content text-bg-dark border-secondary">
                 <div class="modal-header border-secondary">
-                    <h5 class="modal-title"><i class="bi bi-cloud-fill me-2"></i>Gerenciador de Sessáµes na Nuvem</h5>
+                    <h5 class="modal-title"><i class="bi bi-cloud-fill me-2"></i>Gerenciador de Sessões na Nuvem</h5>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
                         aria-label="Close"></button>
                 </div>
@@ -1940,7 +1937,7 @@
                     <ul class="nav nav-tabs border-secondary mb-3" id="cloudTabs" role="tablist">
                         <li class="nav-item" role="presentation">
                             <button class="nav-link active text-light" id="my-sessions-tab" data-bs-toggle="tab"
-                                data-bs-target="#my-sessions-pane" type="button" role="tab">Minhas Sessáµes</button>
+                                data-bs-target="#my-sessions-pane" type="button" role="tab">Minhas Sessões</button>
                         </li>
                         <li class="nav-item" role="presentation">
                             <button class="nav-link text-light" id="shared-sessions-tab" data-bs-toggle="tab"
@@ -1952,9 +1949,9 @@
                         <!-- My Sessions -->
                         <div class="tab-pane fade show active" id="my-sessions-pane" role="tabpanel">
                             <div class="d-flex justify-content-between align-items-center mb-3">
-                                <span>Gerencie suas sessáµes salvas.</span>
+                                <span>Gerencie suas sessões salvas.</span>
                                 <button class="btn btn-success btn-sm" onclick="openSaveSessionModal()"><i
-                                        class="bi bi-plus-circle me-1"></i>Salvar Sessá£o Atual</button>
+                                        class="bi bi-plus-circle me-1"></i>Salvar Sessão Atual</button>
                             </div>
                             <div id="my-sessions-list" class="list-group list-group-flush border-top border-secondary">
                                 <!-- Loaded dynamically -->
@@ -1964,7 +1961,7 @@
                         <!-- Shared With Me -->
                         <div class="tab-pane fade" id="shared-sessions-pane" role="tabpanel">
                             <div class="mb-3">
-                                <span>Sessáµes que outros usuá¡rios compartilharam com vocáª.</span>
+                                <span>Sessões que outros usuários compartilharam com você.</span>
                             </div>
                             <div id="shared-sessions-list"
                                 class="list-group list-group-flush border-top border-secondary">
@@ -1983,13 +1980,13 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content text-bg-dark border-secondary">
                 <div class="modal-header border-secondary">
-                    <h5 class="modal-title">Salvar Sessá£o na Nuvem</h5>
+                    <h5 class="modal-title">Salvar Sessão na Nuvem</h5>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
                         aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <div class="mb-3">
-                        <label for="sessionNameInput" class="form-label">Nome da Sessá£o</label>
+                        <label for="sessionNameInput" class="form-label">Nome da Sessão</label>
                         <input type="text" class="form-control bg-dark text-light border-secondary"
                             id="sessionNameInput" placeholder="Ex: Cargas Manhá£ 22/01">
                     </div>
@@ -2007,7 +2004,7 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content text-bg-dark border-secondary">
                 <div class="modal-header border-secondary">
-                    <h5 class="modal-title">Compartilhar Sessá£o</h5>
+                    <h5 class="modal-title">Compartilhar Sessão</h5>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
                         aria-label="Close"></button>
                 </div>
@@ -2015,10 +2012,10 @@
                     <input type="hidden" id="shareSessionId">
                     <p>Compartilhar "<span id="shareSessionName" class="fw-bold"></span>" com:</p>
                     <div class="mb-3">
-                        <label for="shareEmailInput" class="form-label">E-mail do Destinatá¡rio</label>
+                        <label for="shareEmailInput" class="form-label">E-mail do Destinatário</label>
                         <input type="email" class="form-control bg-dark text-light border-secondary"
                             id="shareEmailInput" placeholder="colega@selmi.com.br">
-                        <div class="form-text text-light">O usuá¡rio deve ter uma conta no sistema.</div>
+                        <div class="form-text text-light">O usuário deve ter uma conta no sistema.</div>
                     </div>
                 </div>
                 <div class="modal-footer border-secondary">
