--- a/index.html
+++ b/index.html
@@ -925,8 +925,8 @@
                     style="min-height: 70vh;"><i class="bi bi-cloud-arrow-up-fill"
                         style="font-size: 5rem; color: var(--dark-primary);"></i>
                     <h2 class="mt-4">Bem-vindo ao ApexLog</h2>
-                    <p class="lead text-muted">Para comeá§ar, carregue sua planilha de pedidos na barra lateral e
-                        clique em "Processar Cargas".<br>Seu dashboard de previsá£o será¡ gerado aqui.</p>
+                    <p class="lead text-muted">Para comear, carregue sua planilha de pedidos na barra lateral e
+                        clique em "Processar Cargas".<br>Seu dashboard de previsão será gerado aqui.</p>
                 </div>
             </div>
         </div>
