--- a/index.html
+++ b/index.html
@@ -1582,6 +1582,11 @@
                                 id="map-distancia">-- km</span></div>
                         <div class="small fw-bold text-primary"><i class="bi bi-clock-fill me-1"></i><span
                                 id="map-tempo">-- min</span></div>
+                        <div class="vr"></div>
+                        <div class="small fw-bold text-success"><i class="bi bi-basket-fill me-1"></i>Peso: <span
+                                id="map-peso">-- kg</span></div>
+                        <div class="small fw-bold text-info"><i class="bi bi-box-seam-fill me-1"></i>Cubagem: <span
+                                id="map-cubagem">-- m³</span></div>
                     </div>
                     <button type="button" class="btn btn-outline-secondary" onclick="printMap()"><i
                             class="bi bi-printer-fill me-1"></i> Imprimir Rota</button>
