--- a/index.html
+++ b/index.html
@@ -1131,9 +1131,16 @@
                                 </li>
                                 <li class="nav-item" role="presentation"><button class="nav-link tab-roteirizados"
                                         data-bs-toggle="tab" data-bs-target="#roteirizados-tab-pane"
-                                        id="roteirizados-tab-btn"><i class="bi bi-map"></i>Roteirizados <span
+                                        id="roteirizados-tab-btn"><i class="bi bi-map"></i>Roteirização Automática <span
                                             id="badge-roteirizados"
                                             class="badge bg-white text-danger ms-2 rounded-pill d-none">0</span></button>
+                                </li>
+                                <li class="nav-item" role="presentation"><button class="nav-link" data-bs-toggle="tab"
+                                        data-bs-target="#montagens-especiais-tab-pane"
+                                        style="color: var(--dark-accent) !important;"><i
+                                            class="bi bi-tools"></i>Roteirização Manual
+                                        <span id="badge-montagens-especiais"
+                                            class="badge bg-warning text-dark ms-2 rounded-pill d-none">0</span></button>
                                 </li>
                                 <li class="nav-item" role="presentation"><button class="nav-link" data-bs-toggle="tab"
                                         data-bs-target="#outros-pedidos-tab-pane"><i class="bi bi-collection"></i>Outros
@@ -1245,7 +1252,7 @@
                                     <div
                                         class="d-flex flex-wrap justify-content-between align-items-center mb-3 no-print gap-2">
                                         <p class="card-subtitle text-body-secondary small mb-0">Cargas geradas por
-                                            Roteirização de Lista.</p>
+                                            Roteirização Automática (Lista).</p>
                                         <button class="btn btn-sm btn-outline-light"
                                             onclick="imprimirCargasGeneric('resultado-roteirizados', 'Cargas Roteirizadas')"><i
                                                 class="bi bi-printer-fill me-1"></i>Imprimir Cargas</button>
@@ -1253,6 +1260,21 @@
                                     <div id="resultado-roteirizados" class="mt-3">
                                         <div class="empty-state"><i class="bi bi-map"></i>
                                             <p>Nenhuma carga roteirizada por lista.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tab-pane fade" id="montagens-especiais-tab-pane" role="tabpanel">
+                                    <div
+                                        class="d-flex flex-wrap justify-content-between align-items-center mb-3 no-print gap-2">
+                                        <p class="card-subtitle text-body-secondary small mb-0">Cargas de Roteirização
+                                            Manual.</p>
+                                        <button class="btn btn-sm btn-outline-warning"
+                                            onclick="imprimirCargasGeneric('resultado-montagens-especiais', 'Cargas Especiais')"><i
+                                                class="bi bi-printer-fill me-1"></i>Imprimir Especiais</button>
+                                    </div>
+                                    <div id="resultado-montagens-especiais" class="mt-3">
+                                        <div class="empty-state"><i class="bi bi-stars"></i>
+                                            <p>Nenhuma montagem especial.</p>
                                         </div>
                                     </div>
                                 </div>
