--- a/index.html
+++ b/index.html
@@ -2160,6 +2160,7 @@
         </div>
     </div>
 
+    <script src="js/toll_logic.js"></script>
     <script src="js/script.js"></script>
     <script src="js/freight_logic.js"></script>
     <!-- Cloud Manager Modal -->
